--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <div class="navdiv">
                 <div class="logo"><a href="#"><img src="dice-5 (1).png" alt="dice" width="25" height="25">FLUKE</a></div>
             <ul>
-                <li class="li"><a href="">Home</a></li>
+                <li class="li"><a href="https://simplord123.github.io/home/">Home</a></li>
                 <li class="li"><a href="https://simplord123.github.io/7777group/">Menu</a></li>
                 <li class="li"><a href="https://t.me/Deus_servus" target="_blank">Contact</a></li>
             </ul>
