--- a/index.html
+++ b/index.html
@@ -9,35 +9,114 @@
 </head>
 <body>
     <body>
+        <header>
         <nav class="navbar">
             <div class="navdiv">
                 <div class="logo"><a href="#"><img src="dice-5 (1).png" alt="dice" width="25" height="25">FLUKE</a></div>
             <ul>
-                <li class="li"><a href="https://simplord123.github.io/home/">Home</a></li>
+                <li class="li"><a href="">Home</a></li>
                 <li class="li"><a href="https://simplord123.github.io/7777group/">Menu</a></li>
                 <li class="li"><a href="https://t.me/Deus_servus" target="_blank">Contact</a></li>
             </ul>
         </div>
         </nav>
+    </header>
         <main>
-            <h2>“Stone, Blood, and Light”</h2>
+            <h2>“A Battle From Within”<br>Author: Yvan Pogi The end of (Edo Period 1868)</h2>
+            <br>
+            <img src="Koboto_Santaro,_a_Japanese_military_commander_Wellcome_V0037661.jpg" alt="Samurai" title="Edo period Samurai" width="250" height="328">
             <br>
                 <p>
-                    Stone cuts through my palms —<br>
-                    still, I climb with silent breath. <br>
-                    Wind sings of the pain.
+                    I have fallen <br>
+                    more times than I can count. <br>
+                    Each time, <br>
+                    I shattered — <br>
+                    not just bone or blade, <br>
+                    but the man I thought I was. <br> 
                 </p>
                 <br>
                 <p>
-                    Burdened by the weight, <br>
-                    I kneel so others may rise — <br>
-                    honor tastes like blood. <br>
+                    From blood-stained soil <br>
+                    I gathered the fragments <br>
+                    of who I used to be, <br>
+                    cutting my hands <br>
+                    on memory, <br>
+                    on failure, <br>
+                    on the echo of a name once proud. <br>
                 </p>
                 <br>
                 <p>
-                    Above, light breaks through. <br>
-                    I reach back with trembling hands — <br>
-                    glory is not mine. <br>
+                    They thought I was beaten. <br>
+                    Even I believed it once. <br>
+                    But fire does not only destroy — <br>
+                    it forges. <br>
+                </p>
+                <br>
+                <p>
+                    From ash, I rise. <br>
+                    Again. <br>
+                    And again. <br>
+                    And again. <br>
+                </p>
+                <br>
+                <p>
+                    Not for vengeance. <br>
+                    Not for glory. <br>
+                    But for the promise <br>
+                    that the battle inside me <br>
+                    can be won. <br>
+                </p>
+                <br>
+                <p>
+                    I faced the enemy <br>
+                    with my own eyes. <br>
+                    He wore my doubts. <br>
+                    He spoke in my voice. <br>
+                    He knew my every weakness. <br>
+                </p>
+                <br>
+                <p>
+                    But I stood. <br>
+                    Not as the man I was — <br>
+                    but as the warrior I became. <br>
+                    Each scar, a lesson. <br>
+                    Each fall, a trial. <br>
+                    Each breath, defiance. <br>
+                </p>
+                <br>
+                <p>
+                    And in the silence after the final clash, <br>
+                    when my blade no longer trembled, <br>
+                    I found something greater than victory: <br>
+                    peace. <br>
+                </p>
+                <br>
+                <p>
+                    Not handed to me — <br>
+                    but earned. <br>
+                    Carved from pain. <br> 
+                    Tempered in flame. <br>
+                    Paid for in full. <br>
+                </p>
+                <br>
+                <p>
+                    I walk now not to escape the past, <br>
+                    but to honor it. <br>
+                    To carry the weight, <br>
+                    without letting it break me. <br>
+                </p>
+                <br>
+                <p>
+                    This is my path. <br>
+                    Not of perfection — <br>
+                    but of perseverance. <br>
+                </p>
+                <br>
+                <p>
+                    From ash, I rise. <br>
+                    And from within, <br>
+                    I am whole. <br>
+                    ---
                 </p>
         </main>
         <footer>
