--- a/index.html
+++ b/index.html
@@ -22,9 +22,10 @@
         </nav>
     </header>
         <main>
-            <h2>“A Battle From Within”<br>Author: Yvan Pogi The end of (Edo Period 1868)</h2>
+            <h2>“A Reflection of the Fallen Blade”</h2>
+            <h4>The end of (Edo Period 1868)</h4>
             <br>
-            <img src="Koboto_Santaro,_a_Japanese_military_commander_Wellcome_V0037661.jpg" alt="Samurai" title="Edo period Samurai" width="250" height="328">
+            <img src="samurai-67662_640.jpg" alt="" title="Edo period Samurai" width="250" height="328">
             <br>
                 <p>
                     I have fallen <br>
@@ -118,6 +119,8 @@
                     I am whole. <br>
                     ---
                 </p>
+                <br>
+                <h4>Author: Yvan Pogi</h4>
         </main>
         <footer>
             <a href="https://www.facebook.com/" target="_blank">
