--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                 <h4>Author: Yvan Pogi</h4>
         </main>
         <footer>
-            <a href="https://www.facebook.com/" target="_blank">
+            <a href="https://www.facebook.com/OnlineShoppingMarketPh101" target="_blank">
             <img src="facebook.png" alt="facebook" width="60" height="50"></a>
             <a href="https://www.instagram.com/accounts/login/?hl=en" target="_blank">
             <img src="insta.png" alt="instagram" width="60" height="50"></a>
