--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
         <main>
             <h2>“A Reflection of the Fallen Blade”</h2>
             <h4>The end of (Edo Period 1868)</h4>
+            <audio autoplay loop mute controls>
+                <source src="areyawinningson.mp3">
+            </audio>
             <br>
             <img src="samurai-67662_640.jpg" alt="" title="Edo period Samurai" width="300" height="420">
             <br>
@@ -121,6 +124,7 @@
                 </p>
                 <br>
                 <h4>Author: Yvan Pogi</h4>
+                
         </main>
         <footer>
             <a href="https://www.facebook.com/OnlineShoppingMarketPh101/" target="_blank">
