--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <main>
             <h2>“A Reflection of the Fallen Blade”</h2>
             <h4>The end of (Edo Period 1868)</h4>
-            <audio autoplay loop mute controls>
+            <audio autoplay loop>
                 <source src="areyawinningson.mp3">
             </audio>
             <br>
