--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/png" href="dice-5 (1).png">
+    <link rel="icon" type="image/png" href="dice-5.png">
     <link rel="stylesheet" href="style.css">
     <title>Fluke.com</title>
 </head>
@@ -12,7 +12,7 @@
         <header>
             <nav class="navbar">
                 <div class="navdiv">
-                    <div class="logo"><a href="#"><img src="dice-5 (1).png" alt="dice" width="25" height="25">FLUKE</a></div>
+                    <div class="logo"><a href="#"><img src="dice-5.png" alt="dice" width="25" height="25">FLUKE</a></div>
                 <ul>
                     <li class="li"><a href="https://simplord123.github.io/home/">Home</a></li>
                     <li class="li"><a href="https://simplord123.github.io/7777group/">Menu</a></li>
@@ -123,19 +123,19 @@
                     ---
                 </p>
                 <br>
-                <h4>Author: Yvan Pogi</h4>
+                <h4>Author: Ruth Krissan</h4>
                 
         </main>
         <footer>
-            <a href="https://www.facebook.com/OnlineShoppingMarketPh101/" target="_blank">
-            <img src="facebook.png" alt="facebook" width="50" height="50"></a>
-            <a href="https://www.instagram.com/accounts/login/?hl=en" target="_blank">
-            <img src="insta.png" alt="instagram" width="50" height="50"></a>
-            <a href="https://x.com/" target="_blank">
-            <img src="twitter.png" alt="X" width="50" height="50"></a>
-            <a href="https://www.tiktok.com/en" target="_blank">
-            <img src="tiktok.png" alt="tiktok" width="50" height="50"></a>
-            <a href="https://www.youtube.com/" target="_blank"><img src="youtube.png" alt="youtube" width="50" height="50"></a>
+            <a href="https://www.facebook.com/OnlineShoppingMarketPh101" target="_blank">
+                <img src="facebook.png" alt="facebook" width="50" height="50" title="Facebook Page" loading="lazy"></a>
+                <a href="https://www.instagram.com/accounts/login/?hl=en" target="_blank">
+                <img src="insta.png" alt="instagram" width="50" height="50" loading="lazy" title="Instagram Page"></a>
+                <a href="https://x.com/" target="_blank">
+                <img src="twitter.png" alt="X" width="50" height="50" loading="lazy" title="Twitter Page"></a>
+                <a href="https://www.tiktok.com/en" target="_blank">
+                <img src="tiktok.png" alt="tiktok" width="50" height="50" loading="lazy" title="Tiktok Page"></a>
+                <a href="https://www.youtube.com/" target="_blank"><img src="youtube.png" alt="youtube" width="50" height="50" title="Youtube Channel" loading="lazy"></a>
             <p>
                 "Eyes to the Sky"<br>
                 Five were called to watch the skies,
