--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Fluke.com</title>
 </head>
 <body>
-    <body><!--Start of Tawk.to Script-->
+<!--Start of Tawk.to Script-->
 <script type="text/javascript">
 var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
 (function(){
@@ -168,4 +168,5 @@ s0.parentNode.insertBefore(s1,s0);
             </footer>
 </body>
 </html>
+
 
